# VizuMarker

./: .gitignore  AGENTS.md  CODE_AUDIT_REPORT.md  DEFINITION_OF_DONE.md  Dockerfile  ENHANCED_README.md  QWEN.md  README.md  deployment.md  dev_server.py  docker-compose.yml  pyproject.toml  start_vizumarker.py  test_text.txt
frontend/public/: index.html  ld35-semantic-viewer.js  semantic-demo.html
ld35_service/: __init__.py  cli_batch.py  main.py
ld35_service/api/: __init__.py
ld35_service/api/v1/: __init__.py  annotation.py  api.py  export.py  render.py
ld35_service/core/: config.py  ld35_engine.py  security.py  storage.py
ld35_service/engine/: sem_core.py
ld35_service/schemas/: annotation.py  render.py
ld35_service/utils/: chunking.py  html_renderer.py  pdf_generator.py
ld35_service/workers/: annotation_tasks.py
resources/: markers_canonical.ld35.json  promotion_mapping.ld35.json  weights.ld35.json
tests/: conftest.py  test_api.py  test_integration.py  test_ld35_engine.py
